<resources>
  <string name="app_name">Forms</string>
  <string name="form">Form</string>
  <string name="name">Name : </string>
  <string name="enter_name">Enter your name</string>
  <string name="name_error">Name should not be empty.</string>
  <string name="age">Age : </string>
  <string name="enter_age">Enter your age</string>
  <string name="age_error">Age should not be empty.</string>
  <string name="email">Email : </string>
  <string name="enter_email">Enter your email</string>
  <string name="email_error">Email should not be empty.</string>
  <string name="phone_number">Phone number : </string>
  <string name="enter_phone_number">Enter your phone number</string>
  <string name="phone_error">Phone number should not be empty.</string>
  <string name="submit">Submit</string>
  <string name="submit_message">Thank you for submitting your details.</string>
  <string name="show_details">User Details</string>
  <string name="form_submission">Form submission</string>
  <string name="message">Are you sure you want to submit these details.</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="image_text">Please click to add image.</string>
  <string name="sample_name">Karthik</string>
  <string name="sample_age">23</string>
  <string name="sample_phone_number">9880443410</string>
  <string name="sample_email">karthikr1493@gmail.com</string>
  <string name="camera_text">You have already clicked a photo.</string>
  <string name="note">Note</string>
  <string name="camera_message">While clicking the pic ensure that the phone is held in the landscape mode.</string>
  <string name="phone_camera">This is a phone with its camera turned on.</string>
  <string name="about_us">About us</string>
  <string name="rate_us">Rate us</string>
  <string name="feedback">Feedback</string>
  <string name="not_now">NotNow</string>
  <string name="thank_you_submit">Thank you for submitting your rating.</string>
  <string name="no_internet_connection">Oops! There is no internet connection</string>
  <string name="retry">retry</string>
  <string name="no_internet">There is no internet.</string>
  <string name="seebar_progress">Seekbar Progress:</string>
  <string name="feedback_text">Please write your feedback here...</string>
  <string name="feedback_submit_text">Thank you for submitting your feedback.</string>
  <string name="empty_feedback">Feedback should not be empty.</string>
  <string name="faqs">FAQs</string>
  <string name="max_length">/150</string>
  <string name="min_length">0</string>
  <string name="tap_stars">Tap stars to rate us</string>
  <string name="sample_faq_1">What is the use of this app?</string>
  <string name="sample_answer_1">Its for filling up user details</string>
  <string name="one">1.</string>

  <string-array name="questions">
    <item>What is the use of this app?</item>
    <item>On which version of Android will this app work?</item>
    <item>What is the intended audience for this app?</item>
    <item>Who created this app?</item>
    <item>What happens when you click on Feedback button</item>
  </string-array>

  <string-array name="answers">
    <item>Its for filling up details of a user.</item>
    <item>This app will run on devices after android Lollipop.</item>
    <item>Its for everyone.</item>
    <item>This app is made by Karthik R.</item>
    <item>User\'s rating is saved and is taken to the feedback page as the given rating is less than threshold</item>
  </string-array>

  <string-array name="questionNo">
    <item>1.</item>
    <item>2.</item>
    <item>3.</item>
    <item>4.</item>
    <item>5.</item>
  </string-array>
</resources>
