<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/yellow"
  android:orientation="vertical"
  tools:context="com.userdetails.forms.view.feedback.FeedbackActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
      android:layout_width="250dp"
      android:layout_height="250dp"
      android:layout_gravity="center"
      android:contentDescription="@string/feedback"
      android:src="@drawable/feedback"/>

    <EditText
      android:id="@+id/feedback_text"
      android:layout_width="match_parent"
      android:layout_height="120dp"
      android:background="@color/grey"
      android:gravity="top"
      android:hint="@string/feedback_text"
      android:inputType="textMultiLine"
      android:maxLines="5"/>

    <Button
      android:id="@+id/submit_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/red"
      android:text="@string/submit"/>
  </LinearLayout>
</ScrollView>